[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools_scm[toml]>=8.0"
]

[project]
authors = [
  {name="Jingyi Tang"},
]
classifiers = [
  "Development Status :: 0.1 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  # All core dependencies must be sourced from conda (conda-forge).
  # See ``environment.yml`` for further information.
]
description = "Tools for using ELBT in LUME"
dynamic = [ "version" ]
keywords = []
name = "lume-elbt"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
doc = [
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/slaclab/lume-elbt"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = ["."]
include = [ "elbt*", ]
namespaces = false

[project.license]
file = "LICENSE"

[tool.ruff]
# select = []
# ignore = []

[tool.pytest.ini_options]
addopts = "--cov=elbt/"
log_cli_level = "info"
log_level = "debug"
testpaths = ["elbt/tests"]

[tool.setuptools_scm]
version_file = "elbt/_version.py"